Setting up main

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: Tempest
 version: '${project.version}'
 main: me.funky.hub.Tempest
+website: https://discord.gg/jtPFMbsEcw
 authors:
   - funkyranveer
   - Kira Development
